--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/styles/monokai_sublime.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/styles/monokai_sublime.min.css" integrity="sha256-p7iXCLgo7yYL7S/4wvsCDAFSqcQhow/2LeoLGD09kys="crossorigin="anonymous">
 <link href='https://fonts.googleapis.com/css?family=Roboto:400italic,700italic,700,400' rel='stylesheet' type='text/css'>
 <style>
 .post {
