--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -12,7 +12,7 @@
        <div class="input-group version-dropdown">
           <div class="input-group-addon">CDN provider</div>
           <select class="form-control cdn-provider-selector" style="float: right;" disabled>
-            <option value="cloudflare" selected>CloudFlare</option>
+            <option value="cloudflare" selected>Cloudflare</option>
           </select>
         </div>
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
