--- a/templates/library.html
+++ b/templates/library.html
@@ -38,7 +38,7 @@
           </select>
           <div class="input-group-addon">CDN provider</div>
           <select class="form-control cdn-provider-selector" style="float: right;" disabled>
-            <option value="cloudflare" selected>CloudFlare</option>
+            <option value="cloudflare" selected>Cloudflare</option>
           </select>
         </div>
       <div style="clear: both;"></div>
