--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" integrity="sha256-VBrFgheoreGl4pKmWgZh3J23pJrhNlSUOBek+8Z2Gv0=" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/theme.css" />
     <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.5.0/octicons.min.css" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.css" integrity="sha256-CYVY39mQQ+3yRKbAaPcIrOcRUUVw+L3BFBM1s/lRb0s=" crossorigin="anonymous" />
     <link rel="dns-prefetch" href="//cdn.carbonads.com" />
     <link rel="dns-prefetch" href="//static.getclicky.com" />
@@ -117,13 +119,13 @@
       {{{page}}}
 
     </div>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <p class="text-muted">
           Follow <a href="https://github.com/PeterDaveHello"><i class="fa fa-github"></i></a> <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=peterdavehello&tw_p=followbutton"><i class="fa fa-twitter"></i></a> <a href="https://www.peterdavehello.org">@Peter Dave Hello</a> and <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=cdnjs&tw_p=followbutton"><i class="fa fa-twitter"></i>@cdnjs</a> on GitHub and twitter to get latest news about cdnjs!
         </p>
       </div>
-    </footer>
+    </footer> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js" integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" integrity="sha256-gOpnA1vUitDpr6qV2ONTzFxXQKgnwvBCOklJH6hHqyE=" crossorigin="anonymous" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js" integrity="sha256-el9b2jzAb306WCRULKaCAxJc30iuC68Bt+twLhWyDBk=" crossorigin="anonymous" defer></script>
@@ -163,6 +165,40 @@ $('.post').show();
     room: 'cdnjs/cdnjs'
   };
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.1.3/sidecar.js" integrity="sha256-vhFaRz2RSnQJsCGKCZ415wAHuap2cOxOi1oJTE+xGAo=" crossorigin="anonymous" async></script>
+<div class="hired-banner">
+  <div style="position: relative; height: 0;">
+    <div class="hired-triangle"></div>
+    <span class="octicon octicon-x close-banner"></span>
+  </div>
+  <div class="container">
+    <div class="header">
+      <span class="hired-logo">HIRED</span>
+      <span class="hired-promo">Are you a developer? We bring job offers to you<span class="octicon octicon-plus-small banner-expand"></span></span>
+    </div>
+    <div class="hired-content">
+      <div style="clear: both;"></div>
+      <div class="first-pitch">We Bring Job Offers To You</div>
+<div class="first-copy">FREE For Candidates. Salaries from $75,000 to $200,000</div>
+<form class="hired-form">
+<input class="email-input" type="text" />
+<input type="submit" class="get-job-offers" value="GET JOB OFFERS" />
+</form>
+<p class="hired-privacy">By entering your email address, you are agreeing to Hired's <a href="https://hired.com.au/terms">Terms of Service</a> and <a href="https://hired.com.au/privacy">Privacy Policy</a>.</p>
+<div class="hired-second-section">
+<div class="hired-divider" />
+<div class="xs-mrlauto xs-11of12 sm-8of12 md-6of12">
+<div class="how-it-works" id="how-it-works-title">How It Works</div>
+<ol class="list-numbered">
+<li class="xs-delta" id="how-it-works-first">Answer a Few Questions</li>
+<li class="xs-delta" id="how-it-works-second">Companies Send You Offers with Salary Details Upfront</li>
+<li class="xs-delta" id="how-it-works-third">Your Profile is Hidden from Current and Previous Employers</li>
+<li class="xs-delta" id="how-it-works-fourth">Find a Job and Get a $1000 Bonus From Hired</li>
+</ol>
+
+<a href="https://www.hired.com/?utm_source=sponsor&utm_medium=cdnjs&utm_campaign=q3-16" class="learn-more">LEARN MORE</a>
+</div>
+</div>
+    </div>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.1.3/sidecar.js" integrity="sha256-vhFaRz2RSnQJsCGKCZ415wAHuap2cOxOi1oJTE+xGAo=" crossorigin="anonymous" async></script> -->
 </body>
 </html>
