--- a/templates/layout.html
+++ b/templates/layout.html
@@ -195,7 +195,7 @@ $('.post').show();
 <li class="xs-delta" id="how-it-works-fourth">Find a Job and Get a $1000 Bonus From Hired</li>
 </ol>
 
-<a href="https://www.hired.com/?utm_source=sponsor&utm_medium=cdnjs&utm_campaign=q3-16" class="learn-more">LEARN MORE</a>
+<a href="https://www.hired.com/?utm_source=sponsor&utm_medium=cdnjs&utm_campaign=q4-16-banner" class="learn-more">LEARN MORE</a>
 </div>
 </div>
     </div>
