--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,7 +35,7 @@
   </head>
 
   <body>
-  <span id="forkongithub"><a href="https://www.bountysource.com/teams/cdnjs" target="_blank">Donate CDNJS!</a></span>
+  <span id="forkongithub"><a href="https://github.com/cdnjs/cdnjs" target="_blank">Star CDNJS!</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
         <div class="col-md-12">
