update about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
   <div class="col-md-6">
     <p style="margin-top: 6px;">
     
-      <span>Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
+      <span>Everyone loves the&nbsp;</span><a target="_blank" href="https://developers.google.com/speed/libraries/?csw=1">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="https://www.asp.net/ajax/cdn" target="_blank">Microsoft runs a public CDN</a>.
       <br><span>The problem is, they only host the most popular libraries.</span>
       <br><span>We host all the popular libraries - JavaScript, CSS, SWF, images, etc!</span>
       <br><span>Join us now on GitHub!</span><br>
@@ -12,8 +12,8 @@
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=new-website&type=star&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       <iframe src="https://ghbtns.com/github-btn.html?user=cdnjs&repo=cdnjs&type=fork&count=true" frameborder="0" scrolling="0" width="105px" height="20px"></iframe>
       </p><p>
-      <span>Supports <a href="https://http2.github.io"><strong>http2.0</strong>/</a>http/https/<a href="https://en.wikipedia.org/wiki/SPDY">spdy</a>, we encourage always using <strong>https</strong>!
-      <br /><span>Currently used by ~1,143,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
+      <span>Supports <a href="https://http2.github.io" target="_blank"><strong>http2.0</strong>/</a>http/https/<a href="https://en.wikipedia.org/wiki/SPDY" target="_blank">spdy</a>, we encourage always using <strong>https</strong>!
+      <br /><span>Currently, CDNJS is one of the most famous free and public web front-end CDN services which is used by ~1,143,000 websites worldwide, see more detail on <a href="https://trends.builtwith.com/cdn/CDN-JS" target="_blank">BuiltWith</a> and <a target="_blank" href="https://w3techs.com/technologies/overview/content_delivery/all">W3Techs</a>.</span>
     </p>
 
     <div class="logged-in" style="display: none;">
@@ -28,23 +28,23 @@
     <h3>Sponsors</h3>
     <div class="sponsors">
 
-<a href="https://cloudflare.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs">
+<a href="https://cloudflare.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs" target="_blank">
   <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
 </a>
 <br />
       <p>At Cloudflare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. Cloudflare is proud to provide the global CDN infrastructure that will help power that future.</p>
       <br />
-      <a href="https://www.algolia.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about">
+      <a href="https://www.algolia.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about" target="_blank">
         <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia256x80.png" width="192" height="60"/>
       </a>
       <p>Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
       <br />
-      <a href="https://www.keycdn.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about">
+      <a href="https://www.keycdn.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about" target="_blank">
         <img alt="KeyCDN" style="margin-bottom: 20px;" src="/img/keycdn.svg" width="212" height="62" />
       </a>
       <p>KeyCDN is a high-performance CDN with a RESTful API ideal for developers. The CDN offers real-time stats and raw logs. Free custom SSL is available based on Let's Encrypt. Instant purge makes sure that content is never outdated.</p>
       <br />
-      <a href="https://www.digitalocean.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about">
+      <a href="https://www.digitalocean.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about" target="_blank">
         <img alt="DigitalOcean" style="margin-bottom: 20px;" src="/img/digitalocean.png" width="363" height="62" />
       </a>
       <p>DigitalOcean is simplifying the cloud by providing an infrastructure experience that developers love. DigitalOcean is built on a foundation of open source software and proud to give back to community-driven projects like CDNJS.</p>
@@ -65,14 +65,14 @@
       <tbody>
         <tr>
           <td style="width:300px;">
-            <a href="http://github.com/ryankirkman">
+            <a href="https://github.com/ryankirkman" target="_blank">
               <img style="width: 50px; height: 50px;" src="/img/ryan.jpg" />
               Ryan Kirkman
             </a>
             <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/ryan_kirkman" data-show-count="false" data-lang="en">Follow @ryan_kirkman</a>
           </td>
           <td style="width: 300px;">
-            <a href="http://github.com/thomasdavis">
+            <a href="https://github.com/thomasdavis" target="_blank">
               <img style="width: 50px; height: 50px;" alt="" src="/img/thomas.jpg" />
               Thomas Davis
             </a>
@@ -88,21 +88,21 @@
       <tbody>
         <tr>
           <td style="width: 300px;">
-            <a href="https://github.com/PeterDaveHello">
+            <a href="https://github.com/PeterDaveHello" target="_blank">
               <img style="width: 50px; height: 50px;" alt="Peter Dave Hello" src="/img/PeterDaveHello.jpg" />
               Peter Dave Hello
             </a>
             <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/peterdavehello" data-show-count="false" data-lang="en">Follow @peterdavehello</a>
           </td>
           <td style="width: 300px;">
-            <a href="http://decompile.it/blog/">
+            <a href="http://decompile.it/blog/" target="_blank">
               <img style="width: 50px; height: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
               Drew Freyling
             </a>
             <a style="margin-top: 10px;" class="twitter-follow-button" href="https://twitter.com/drewfreyling" data-show-count="false" data-lang="en">Follow @drewfreyling</a>
           </td>
           <td style="width: 300px;">
-            <a href="http://petecooper.org">
+            <a href="http://petecooper.org" target="_blank">
               <img style="width: 50px; height: 50px;" alt="Pete Cooper" src="/img/pete.jpg" />
               Pete Cooper
             </a>
