set og:site_name

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{{title}}</title>
     <meta property="og:title" content="{{title}}" />
+    <meta property="og:site_name" content="CDNJS.com" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cdnjs.com{{{url}}}" />
     <meta property="og:image" content="/img/logotext.png" />
