set favicon in layout

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,6 +33,8 @@
     <link rel="dns-prefetch" href="//static.getclicky.com" />
     <link rel="dns-prefetch" href="//www.google-analytics.com" />
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs" />
+    <link rel="shortcut icon" href="https://cdnjs.com/favicon.ico" />
+    <link rel="icon" href="https://cdnjs.com/favicon.ico" />
   </head>
 
   <body>
