--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
   <div class="col-md-12">
     <div>
       <div class="packages-table-container" style="display: none;">
+        <div id="default_demo"></div>
 
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
@@ -25,3 +26,14 @@
   </div>
   </div>
 </div>
+
+<script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+<script>
+(function(){
+  _bsa.init('default', 'CVAI653I', 'placement:demo', {
+    target: '#default_demo',
+    align: 'horizontal',
+    disable_css: 'true'
+  });
+})();
+</script>
