--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -7,14 +7,9 @@
 </div>
 <div class="container">
   <div class="col-md-12">
+    <div id="default_demo"></div>
     <div>
       <div class="packages-table-container">
-       <div class="input-group version-dropdown">
-          <div class="input-group-addon">CDN provider</div>
-          <select class="form-control cdn-provider-selector" style="float: right;" disabled>
-            <option value="cloudflare" selected>Cloudflare</option>
-          </select>
-        </div>
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
@@ -61,3 +56,15 @@
   background-color: #fcf8e3 !important;
 }
 </style>
+
+
+<script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
+<script>
+  (function(){
+    _bsa.init('default', 'CVAI653I', 'placement:demo', {
+      target: '#default_demo',
+      align: 'horizontal',
+      disable_css: 'true'
+    });
+  })();
+</script>
