Added force copy when pressing on link
I know there is a copy button, but if you are a twat like me, this is seriously saves time, and helps to prevent accidentally copy of "Copy" title of the button.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -151,3 +151,11 @@ ul.dropdown-menu > li {
     font-size: 9px;
     font-family: Verdana, sans-serif;
 }
+
+/* Selection helper */
+.library-url {
+    -webkit-user-select: all;
+    -moz-user-select: all;
+    -ms-user-select: all;
+    user-select: all;
+}
