--- a/templates/layout.html
+++ b/templates/layout.html
@@ -204,11 +204,11 @@ $('.post').show();
 </div>
     </div>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gitter-sidecar/1.1.3/sidecar.js" integrity="sha256-vhFaRz2RSnQJsCGKCZ415wAHuap2cOxOi1oJTE+xGAo=" crossorigin="anonymous" async></script> -->
-<div itemscope itemtype="http://schema.org/WebSite">
+<div itemscope itemtype="http://schema.org/WebSite" style="display:none">
   <meta itemprop="url" content="https://cdnjs.com/"/>
   <form itemprop="potentialAction" itemscope itemtype="http://schema.org/SearchAction">
     <meta itemprop="target" content="https://cdnjs.com/#q={search_term_string}"/>
-    <input itemprop="query-input" type="text" name="search_term_string" required/>
+    <input itemprop="query-input" type="text" name="q" required/>
     <input type="submit"/>
   </form>
 </div>
