set canonical url

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,7 @@
     <link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="cdnjs" />
     <link rel="shortcut icon" href="https://cdnjs.com/favicon.ico" />
     <link rel="icon" href="https://cdnjs.com/favicon.ico" />
+    <link rel="canonical" href="https://cdnjs.com" />
   </head>
 
   <body>
