Add API simple doc link

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -112,6 +112,7 @@
               </div>
             </li>
             <li><a href="/libraries">Browse Libraries</a></li>
+            <li><a href="/api">API</a></li>
             <li><a href="/about">About</a></li>
             </ul>
        </div>
