Update library.html template
fix #153 Bad font rendering

--- a/templates/library.html
+++ b/templates/library.html
@@ -9,9 +9,9 @@
     <h1 style="margin-top: 00px;" id="libraryName">{{library.name}}</h1>
     {{#watch}}
     <ul class="list-inline">
-      <li><i class="fa fa-eye"><strong> {{watch}}</strong></i></li>
-      <li><i class="fa fa-star"><strong> {{star}}</strong></i></li>
-      <li><i class="fa fa-code-fork"><strong> {{fork}}</strong></i></li>
+      <li><i class="fa fa-eye"></i><strong> {{watch}}</strong></li>
+      <li><i class="fa fa-star"></i><strong> {{star}}</strong></li>
+      <li><i class="fa fa-code-fork"></i><strong> {{fork}}</strong></li>
     </ul>
     {{/watch}}
     <p><a href="{{library.homepage}}">{{library.homepage}}</a>
