added jamatto donate buttons as suggested by PeterDaveHello
added as suggested by https://twitter.com/PeterDaveHello/status/833054712249274369

--- a/templates/library.html
+++ b/templates/library.html
@@ -28,7 +28,7 @@
       </p>
       <p>{{library.description}}</p>
       <em>{{library.keywords}}</em>
-
+      <p/><i class="jamatto-donate" jamatto-bid="cdnjs" jamatto-item="{{library.name}}" jamatto-ccy="USD" jamatto-amounts="0.10 0.20 0.50" jamatto-title="{{library.name}}" jamatto-description="{{library.description}}" jamatto-tags="{{library.keywords}}" jamatto-prompt="Support cdnjs with"></i>
       <br />
       {{#library.gratipay}}
       <a href="https://gratipay.com/{{library.gratipay}}/"><img src="https://img.shields.io/gratipay/{{library.gratipay}}.svg" /></a>
@@ -89,3 +89,4 @@
 </div>
 </div>
 <script>SRI={{{SRI}}}</script>
+<script type="text/javascript" src="https://cdn.jamatto.com/api/js/jamatto.min.js"></script>
