Fix API page type, reture -> return

--- a/templates/api.html
+++ b/templates/api.html
@@ -40,7 +40,7 @@
 			CDNJS
 		</a>(except auto-update config, we'll only return the auto-update type (currently <code>npm or git</code>)
 		<br><br>
-		API will reture minified result by default, if you wanna have a human readable result, try
+		API will return minified result by default, if you wanna have a human readable result, try
 		<code>output=human</code>
 		like so:
 		<br><br>
