[Website] Add footer back, will update the content later

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -124,13 +124,13 @@
       {{{page}}}
 
     </div>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container">
         <p class="text-muted">
           Follow <a href="https://github.com/PeterDaveHello"><i class="fa fa-github"></i></a> <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=peterdavehello&tw_p=followbutton"><i class="fa fa-twitter"></i></a> <a href="https://www.peterdavehello.org">@Peter Dave Hello</a> and <a href="https://twitter.com/intent/follow?region=follow_link&screen_name=cdnjs&tw_p=followbutton"><i class="fa fa-twitter"></i>@cdnjs</a> on GitHub and twitter to get latest news about cdnjs!
         </p>
       </div>
-    </footer> -->
+    </footer>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js" integrity="sha256-Xxq2X+KtazgaGuA2cWR1v3jJsuMJUozyIXDB3e793L8=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js" integrity="sha256-gOpnA1vUitDpr6qV2ONTzFxXQKgnwvBCOklJH6hHqyE=" crossorigin="anonymous" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.0.0/handlebars.min.js" integrity="sha256-el9b2jzAb306WCRULKaCAxJc30iuC68Bt+twLhWyDBk=" crossorigin="anonymous" defer></script>
