--- a/templates/library.html
+++ b/templates/library.html
@@ -43,6 +43,7 @@
           <select class="form-control version-selector" style="float: right;">
             {{#assets}}<option value="{{version}}" {{selected}}>{{version}}</option>{{/assets}}
           </select>
+          <div class="input-group-addon"><a href="{{githubNewIssueUpdateUrl}}" target="_blank" title="We are sorry that if the version of this library you're searching for cannot be found. Please request for library update. ">request update</a></div>
           <div class="input-group-addon">CDN provider</div>
           <select class="form-control cdn-provider-selector" style="float: right;" disabled>
             <option value="cloudflare" selected>Cloudflare</option>
