--- a/templates/library.html
+++ b/templates/library.html
@@ -51,7 +51,7 @@
       <div style="clear: both;"></div>
       <br />
       {{#selectedAssets}}
-      <div data-library-version="{{version}}" class="assets">
+      <div data-library-version="{{version}}" class="assets library-table-container">
           <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
             <tbody>
               {{#files}}
