--- a/public/css/main.css
+++ b/public/css/main.css
@@ -66,6 +66,15 @@
 }
 .copy-button-group .copy-button {
     padding-left: 4px;
+    font-size: 15px;
+}
+
+button.dropdown-toggle {
+    font-size: 15px;
+}
+
+.copy-button-group {
+    padding-top: 10px;
 }
 .dropdown-menu > li > a, .btn:hover, .btn:focus, .btn.focus {
     color: #dd4814
@@ -152,8 +161,11 @@ ul.dropdown-menu > li {
     font-family: Verdana, sans-serif;
 }
 
-/* Selection helper */
 .library-url {
+    font-size: 16px;
+    margin: 5px 0 5px;
+
+    /* Selection helper */
     -webkit-user-select: all;
     -moz-user-select: all;
     -ms-user-select: all;
