[Website] Add scrollup!

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -171,3 +171,27 @@ ul.dropdown-menu > li {
     -ms-user-select: all;
     user-select: all;
 }
+
+/* scrollUp - Pill style */
+#scrollUp {
+    bottom: 22px;
+    right: 22px;
+    background-color: #555;
+    color: #fff;
+    font-size: 14px;
+    font-family: sans-serif;
+    text-decoration: none;
+    opacity: .9;
+    padding: 10px 20px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
+    -webkit-transition: background 200ms linear;
+    -moz-transition: background 200ms linear;
+    -o-transition: background 200ms linear;
+    transition: background 200ms linear;
+    -webkit-backface-visibility: hidden;
+}
+#scrollUp:hover {
+    background-color: #000;
+}
