--- a/templates/layout.html
+++ b/templates/layout.html
@@ -163,6 +163,7 @@ $('.post code').addClass('hljs');
 $('.post').show();
     </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js" integrity="sha256-fkOAs5tViC8MpG+5VCOqdlSpLL8htz4mdL2VZlWGoMA=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/scrollup/2.4.1/jquery.scrollUp.min.js" integrity="sha256-t2YrqZoTLq/Qt8zIw0BMiuRC2X5+a3O7PODU8RwoyYw=" crossorigin="anonymous"></script>
 
 <script defer>hljs.initHighlightingOnLoad();</script>
 <div itemscope itemtype="http://schema.org/WebSite" style="display:none">
