--- a/public/css/main.css
+++ b/public/css/main.css
@@ -161,6 +161,10 @@ ul.dropdown-menu > li {
     font-family: Verdana, sans-serif;
 }
 
+tr[data-library-name] {
+    font-size: 16px;
+}
+
 .library-url {
     font-size: 16px;
     margin: 5px 0 5px;
