--- a/public/css/main.css
+++ b/public/css/main.css
@@ -161,12 +161,11 @@ ul.dropdown-menu > li {
     font-family: Verdana, sans-serif;
 }
 
-tr[data-library-name] {
+tr {
     font-size: 16px;
 }
 
 .library-url {
-    font-size: 16px;
     margin: 5px 0 5px;
 
     /* Selection helper */
