--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="col-md-12">
-        <input id="search-box" placeholder="Search from {{libCount}} libraries ..." type="text" class="form-control col-md-7 search" aria-controls="example">
+        <input id="search-box" placeholder="Search from {{libCount}} libraries with {{libVerCount}} different versions ..." type="text" class="form-control col-md-7 search" aria-controls="example">
         <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia64x20.png" style="height: 20px; width:64px" /></a></div>
     </div>
 </div>
