[Website] Update wording of ribbon link to GitHub

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
   </head>
 
   <body>
-  <span id="forkongithub"><a href="https://github.com/cdnjs/cdnjs" target="_blank">Star CDNJS!</a></span>
+  <span id="forkongithub"><a href="https://github.com/cdnjs/cdnjs" target="_blank">CDNJS on GitHub</a></span>
     <div class="container {{wrapperClass}}">
       <div class="row">
         <div class="col-md-12">
