--- a/templates/layout.html
+++ b/templates/layout.html
@@ -46,7 +46,7 @@
         <div class="col-md-12">
           <ul class="menu">
             <li class="logo"><a href="/">cdnjs</a></li>
-            <li><a href="{{request}}" target="_blank">Request a lib</a></li>
+            <li><a href="/request-new-lib" target="_blank">Request a lib</a></li>
             <li><a href="https://www.cloudflare.com/network-map" target="_blank">Network</a></li>
             <li><a href="http://stats.pingdom.com/4jg86a2wqei0" target="_blank">Uptime</a></li>
             <li class="">
