remove useless attributes because of svg

--- a/templates/about.html
+++ b/templates/about.html
@@ -35,7 +35,7 @@
       <p>At Cloudflare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. Cloudflare is proud to provide the global CDN infrastructure that will help power that future.</p>
       <br />
       <a href="https://www.algolia.com/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about" target="_blank">
-        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia.svg" width="192" height="60"/>
+        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia.svg" height="60"/>
       </a>
       <p>Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
       <br />
