Display total search results

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -161,6 +161,10 @@ ul.dropdown-menu > li {
     font-family: Verdana, sans-serif;
 }
 
+#nb-hits-field {
+  font-size: 16px;
+}
+
 tr {
     font-size: 16px;
 }
