--- a/templates/libraries.html
+++ b/templates/libraries.html
@@ -10,6 +10,7 @@
     <div id="default_demo"></div>
     <div>
       <div class="packages-table-container">
+        <p>Total: <span id="nb-hits-field" class="major-color">0</span> results founded.</p>
         <table style="margin-top: 10px; margin-bottom: 80px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
