--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,20 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-12">
+      <ol class="mybreadcrumb text-muted">
+        {{#breadcrumbList}}
+          <li>
+            {{#last}}<span>{{index}}</span>{{/last}}
+            {{^last}}<a href="{{url}}">{{index}}</a>{{/last}}
+          </li>
+        {{/breadcrumbList}}
+      </ol>
+    </div>
+  </div>
+  <div class="row">
   <div class="col-md-6">
     <p style="margin-top: 6px;">
-    
+
       <span>Everyone loves the&nbsp;</span><a target="_blank" href="https://developers.google.com/speed/libraries/?csw=1">Google CDN</a><span>&nbsp;right? Even&nbsp;</span><a href="https://www.asp.net/ajax/cdn" target="_blank">Microsoft runs a public CDN</a>.
       <br><span>The problem is, they only host the most popular libraries.</span>
       <br><span>We host all the popular libraries - JavaScript, CSS, SWF, images, etc!</span>
