--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,17 @@
   <div class="row">
     <div class="col-md-12">
         <input id="search-box" placeholder="Search from {{libCount}} libraries with {{libVerCount}} different versions ..." type="text" class="form-control col-md-7 search" aria-controls="example">
-        <div class="text-right text-muted">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search" target="_blank"><img src="/img/algolia.svg" style="height: 20px; width:75;" /></a></div>
+        <div class="text-muted">
+          <ol class="mybreadcrumb">
+            {{#breadcrumbList}}
+              <li>
+                {{#last}}<span>{{index}}</span>{{/last}}
+                {{^last}}<a href="{{url}}">{{index}}</a>{{/last}}
+              </li>
+            {{/breadcrumbList}}
+          </ol>
+          <span class="label-algolia">Realtime search by <a href="http://www.algolia.com/?utm_source=cdnjs&amp;utm_medium=link&amp;utm_campaign=cdnjs_search"><img src="/img/algolia.svg" style="height: 20px" /></a></span>
+        </div>
     </div>
   </div>
   <div class="row">
