--- a/templates/news.html
+++ b/templates/news.html
@@ -37,7 +37,7 @@
           <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp" width="200" height="63"></a><br /><span >Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
       <br />
       <a href="https://www.algolia.com">
-        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia.svg" height="40"/>
+        <img alt="algolia" style="margin-bottom: 20px;" src="/img/algolia.svg" width="151" height="40"/>
       </a>
       <p>Algolia provides a developer-friendly SaaS API for database search. It enables any website or mobile application to easily provide its end-users with an instant and relevant search. With Algolia's unique find as you type experience, users can find what they're looking for in just a few keystrokes.</p>
       <!--
