[Website] Add sponsor @OSSPlanet

--- a/templates/about.html
+++ b/templates/about.html
@@ -43,6 +43,11 @@
         <img alt="DigitalOcean" style="margin-bottom: 20px;" src="/img/digitalocean.png" width="363" height="62" />
       </a>
       <p>DigitalOcean is simplifying the cloud by providing an infrastructure experience that developers love. DigitalOcean is built on a foundation of open source software and proud to give back to community-driven projects like CDNJS.</p>
+      <br />
+      <a href="http://ossplanet.net/?utm_source=cdnjs&utm_medium=link&utm_campaign=cdnjs_about" target="_blank">
+        <img alt="OSSPlanet" style="margin-bottom: 20px;" src="/img/OSSPlanet-2-2.svg" width="370" />
+      </a>
+      <p>Just Go Open, I've Got Your Back. OSSPlanet is an OpenSource-friendly Nonprofit Non-governmental project, provides high quality Free Mirror / Hosting / VPS / Container services for Open Projects. With Unlimited Outbound traffic. We are open, we love freedom. Sponsoring a lot of projects/organizations, and willing to support yours too! Powered by Ubuntu-TW, NCNU, and BlueT. #JustGoOpen</p>
     </div>
     <h3>Media</h3>
     <div class="embed-responsive embed-responsive-16by9">
