[Website] highlight.js for tutorial only (#72)
Per @PeterDaveHello's suggestion in Issue #72, only the tutorial
template requests highlight.js now.

Also updated highlight.js and styles/monokai-sublime.min.css to
version 9.12.

--- a/templates/tutorial.html
+++ b/templates/tutorial.html
@@ -1,4 +1,5 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/styles/monokai_sublime.min.css" integrity="sha256-p7iXCLgo7yYL7S/4wvsCDAFSqcQhow/2LeoLGD09kys="crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js" integrity="sha256-/BfiIkHlHoVihZdc6TFuj7MmJ0TWcWsMXkeDFwhi0zw=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/monokai-sublime.min.css" integrity="sha256-k5mFes0QrsMTUCIg7sRlizkZIhMeL4fTABLlkjQmR0s=" crossorigin="anonymous" />
 <link href='https://fonts.googleapis.com/css?family=Roboto:400italic,700italic,700,400' rel='stylesheet' type='text/css'>
 <style>
 .post {
@@ -25,8 +26,8 @@ h1,h2,h3,h4,h5 {
   margin: 20px 0 20px 0;
 }
 .divider {
-  background: #dd4814; 
-  color: #ebebeb; 
+  background: #dd4814;
+  color: #ebebeb;
   padding: 5px;
   margin: 40px 0;
 }
