--- a/templates/layout.html
+++ b/templates/layout.html
@@ -130,6 +130,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.5/clipboard.min.js" integrity="sha256-QEsBb1yaNpcm7sVqKAyTR42helLtDx/uEWg4Mwdy7HA=" crossorigin="anonymous" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/algoliasearch/3.22.1/algoliasearchLite.min.js" integrity="sha256-af2RXe0fkPuUqhxbsRoVPlEumRNuCaJwDVBnAj2uZcI=" crossorigin="anonymous" defer></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/app-loading/0.0.51/app-loading.min.js" integrity="sha256-YSI87JLSmNNNEzQ0YAIi3MWCVwrWJNSWe7u27Rs6c6c=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollprogress/2.1.2/scrollProgress.min.js" integrity="sha256-G9QkudSF5N+LvucdLGGiCZqtbgLkJ8p8bOyhN68atbM=" crossorigin="anonymous"></script>
   <script src="/js/main.js" defer></script>
 
     <script src="//static.getclicky.com/js" defer></script>
